tests/transpiler/x/pl/map_index.out
ERROR: /workspace/mochi/tests/transpiler/x/pl/map_index.pl:2: Initialization goal raised exception:
ERROR: Type error: `integer' expected, found `"b"' (a string)
